[package]
name = "log_pm_dataset_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
csv = "1.1"
walkdir = "2"
log = "0.4.0"
env_logger = "0.10.0"
lockfree = "0.5.1"
itertools = "0.10.5"
